# dl-benchmark

./: .gitignore  .gitmodules  .travis.yml  README.md  check_pylint.sh  index.html  manual.md  requirements.txt  requirements_ci.txt  requirements_frameworks.txt  requirements_linux.txt  requirements_windows.txt  script_sync.py  setup.cfg
.github/workflows/: codestyle.yml  python-linters.yml  smoke_test.yml  static.yml  unit_test.yml
async_script/: async_script.py
classification_test/: README.md
converter/: README.md  configparser.py  converter.py
demo/: README.md  linux.sh
demo/OpenVINO_DLDT/: README.md  linux.sh
demo/accuracy_checker_configs/: MXNet.xml  MXNet.yml  ONNXRuntime.xml  ONNXRuntime.yml  ONNX_Runtime_Python.xml  OpenCV.xml  OpenCV.yml  OpenCV_DNN_Python.xml  OpenVINO_DLDT.xml  PyTorch.xml  PyTorch.yml  TVM.xml  TVM.yml  TensorFlow.xml  TensorFlow.yml  TensorFlowLite.xml  TensorFlowLite.yml
docker/: Dockerfile  Dockerfile.txt  README.md
docs/: architecture.md  concept.md  manual.md  technologies.md
gui/: buttons.py  main.py  main_window.py  objects.py  tables.py  widgets.py
results/: common_supported_models.md  models_checklist.md  mxnet_models_checklist.md  ncnn_models_checklist.md  onnxruntime_models_checklist.md  opencv_models_checklist.md  openvino_models_checklist.md  paddlepaddle_models_checklist.md  pytorch_models_checklist.md  tensorflow_models_checklist.md  tflite_models_checklist.md  tvm_models_checklist.md  validation_results.md  validation_results_caffe.md  validation_results_intel_models.md
src/: README.md  converter.py  hardware_characteristics.py  readconfig.py  riscv_tflite.csv  test_inference.py
src/cpp_dl_benchmark/: .clang-format  CMakeLists.txt  README.md  main.cpp
src/cpp_dl_benchmark/cmake/: CMakeScriptsConfig.cmake  aarch64_toolchain.cmake  install_clang.sh  riscv64_rvv_toolchain.cmake  riscv64_toolchain.cmake
src/cpp_dl_benchmark/cmake/clang_format/: clang_format.cmake  clang_format_check.cmake  clang_format_fix.cmake
src/cpp_dl_benchmark/common/: CMakeLists.txt
src/cpp_dl_benchmark/common/common_launcher/: CMakeLists.txt
src/cpp_dl_benchmark/common/common_launcher/include/common_launcher/: launcher.hpp
src/cpp_dl_benchmark/common/common_launcher/src/: launcher.cpp
src/cpp_dl_benchmark/common/inputs_preparation/: CMakeLists.txt
src/cpp_dl_benchmark/common/inputs_preparation/include/inputs_preparation/: inputs_preparation.hpp  tensor_utils.hpp
src/cpp_dl_benchmark/common/inputs_preparation/inlclude/: inputs_preparation.hpp  tensor_buffer.hpp
src/cpp_dl_benchmark/common/inputs_preparation/src/: inputs_preparation.cpp  tensor_utils.cpp
src/cpp_dl_benchmark/common/launcher/include/: launcher.hpp
src/cpp_dl_benchmark/common/launcher/src/: launcher.cpp
src/cpp_dl_benchmark/common/output/: CMakeLists.txt
src/cpp_dl_benchmark/common/output/include/output/: output_description.hpp
src/cpp_dl_benchmark/common/utils/: CMakeLists.txt
src/cpp_dl_benchmark/common/utils/include/: args_handler.hpp
src/cpp_dl_benchmark/common/utils/include/utils/: args_handler.hpp  logger.hpp  report.hpp  statistics.hpp  utils.hpp
src/cpp_dl_benchmark/common/utils/src/: args_handler.cpp  report.cpp  statistics.cpp  utils.cpp
src/cpp_dl_benchmark/executorch_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/executorch_launcher/include/: executorch_launcher.hpp  memory_manager.hpp
src/cpp_dl_benchmark/executorch_launcher/src/: executorch_launcher.cpp
src/cpp_dl_benchmark/include/: args_handler.hpp  launcher.hpp  onnxruntime_launcher.hpp  opencv_launcher.hpp  statistics.hpp  tensor_buffer.hpp  utils.hpp
src/cpp_dl_benchmark/onnxruntime_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/onnxruntime_launcher/include/: onnxruntime_launcher.hpp
src/cpp_dl_benchmark/onnxruntime_launcher/src/: onnxruntime_launcher.cpp
src/cpp_dl_benchmark/opencv_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/opencv_launcher/include/: opencv_launcher.hpp
src/cpp_dl_benchmark/opencv_launcher/src/: opencv_launcher.cpp
src/cpp_dl_benchmark/pytorch_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/pytorch_launcher/include/: pytorch_launcher.hpp
src/cpp_dl_benchmark/pytorch_launcher/src/: pytorch_launcher.cpp
src/cpp_dl_benchmark/rknn_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/rknn_launcher/include/: rknn_launcher.hpp
src/cpp_dl_benchmark/rknn_launcher/src/: rknn_launcher.cpp
src/cpp_dl_benchmark/src/: inputs_preparation.cpp  launcher.cpp  onnxruntime_launcher.cpp  opencv_launcher.cpp  utils.cpp
src/cpp_dl_benchmark/tflite_launcher/: CMakeLists.txt  README.md
src/cpp_dl_benchmark/tflite_launcher/custom_ops/: CMakeLists.txt
src/cpp_dl_benchmark/tflite_launcher/custom_ops/include/: custom_ops.hpp  selfie_segmetation_custom_ops.hpp
src/cpp_dl_benchmark/tflite_launcher/custom_ops/src/: custom_ops.cpp  selfie_segmetation_custom_ops.cpp
src/cpp_dl_benchmark/tflite_launcher/include/: tflite_launcher.hpp  tflite_profiler.hpp
src/cpp_dl_benchmark/tflite_launcher/src/: tflite_launcher.cpp  tflite_profiler.cpp
src/onnxruntime_benchmark/: .clang-format  CMakeLists.txt  README.md  main.cpp
src/onnxruntime_benchmark/include/: args_handler.hpp  buffer.hpp  inputs_preparation.hpp  launcher.hpp  logger.hpp  model.hpp  onnxruntime_model.hpp  opencv_launcher.hpp  report.hpp  statistics.hpp  utils.hpp
src/onnxruntime_benchmark/src/: args_handler.cpp  inputs_preparation.cpp  model.cpp  onnxruntime_launcher.cpp  onnxruntime_model.cpp  report.cpp  statistics.cpp  utils.cpp
src/output_processing/: CMakeLists.txt  output_processing.cpp  wrappers.hpp
src/output_processing/include/output_processing/: exception_handler.hpp  output_handlers.hpp  utils.hpp
src/output_processing/src/: output_handlers.cpp  utils.cpp
templates/: Input_template.xml  Output_template.csv  benchmark_config_template.xml  config_for_benchmark_sample.xml  config_sample.xml  config_template.xml  converter_config_sample.xml  out_table_template.csv
tests/: RESULTS.md  validation_results.md
(+818 files in other folders)
